--- a/JEPCO.Application/JEPCO.Application.csproj
+++ b/JEPCO.Application/JEPCO.Application.csproj
@@ -14,8 +14,12 @@
   <ItemGroup>
     <Folder Include="Interfaces\UnitOfWork\" />
     <Folder Include="Interfaces\Repository\" />
-    <Folder Include="Extensions\" />
     <Folder Include="Mapper\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
