--- a/JEPCO.Infrastructure/JEPCO.Infrastructure.csproj
+++ b/JEPCO.Infrastructure/JEPCO.Infrastructure.csproj
@@ -12,10 +12,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Extensions\" />
     <Folder Include="Mapper\" />
     <Folder Include="Persistence\UnitOfWork\" />
     <Folder Include="Persistence\Repository\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
