--- a/JEPCO.Infrastructure/JEPCO.Infrastructure.csproj
+++ b/JEPCO.Infrastructure/JEPCO.Infrastructure.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <Folder Include="Mapper\" />
+    <Folder Include="Models\" />
     <Folder Include="Persistence\UnitOfWork\" />
     <Folder Include="Persistence\Repository\" />
   </ItemGroup>
