Implement Persistence logic with Postgres
1- add generic repo
2- add unit of work
3- implement dbContext
4- setup them with postgres
5- add dummy table for testing

--- a/JEPCO.Application/JEPCO.Application.csproj
+++ b/JEPCO.Application/JEPCO.Application.csproj
@@ -12,12 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\UnitOfWork\" />
-    <Folder Include="Interfaces\Repository\" />
+    <Folder Include="Interfaces\ApplicationDbContext\" />
     <Folder Include="Mapper\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
   </ItemGroup>
