--- a/JEPCO.CSMS/appsettings.json
+++ b/JEPCO.CSMS/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=JEPCO_CSMS;User Id=postgres;Password=YourPasswordOnPostgres"
+  },
   "AllowedHosts": "*"
 }
