--- a/JEPCO.Application/JEPCO.Application.csproj
+++ b/JEPCO.Application/JEPCO.Application.csproj
@@ -13,10 +13,10 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\ApplicationDbContext\" />
-    <Folder Include="Mapper\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
