--- a/JEPCO.Shared/JEPCO.Shared.csproj
+++ b/JEPCO.Shared/JEPCO.Shared.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Extensions\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="8.0.5" />
+  </ItemGroup>
+
 </Project>
