add shared services adn middelwares to an extension method in the shared class library

--- a/JEPCO.CSMS/appsettings.json
+++ b/JEPCO.CSMS/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=JEPCO_CSMS;User Id=postgres;Password=YourPasswordOnPostgres"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=JEPCO_EV;User Id=postgres;Password=12345"
   },
   "AllowedHosts": "*"
 }
