--- a/JEPCO.Shared/JEPCO.Shared.csproj
+++ b/JEPCO.Shared/JEPCO.Shared.csproj
@@ -8,7 +8,14 @@
 
   <ItemGroup>
     <Folder Include="Enums\" />
-    <Folder Include="Extensions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Localization" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="8.0.5" />
   </ItemGroup>
 
 </Project>
