add keycloak authentication

--- a/JEPCO.CSMS/appsettings.Development.json
+++ b/JEPCO.CSMS/appsettings.Development.json
@@ -8,5 +8,20 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=5432;Database=JEPCO_EV;User Id=postgres;Password=YourPasswordOnPostgres"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+
+  "Keycloak": {
+    "realm": "Test",
+    "auth-server-url": "http://localhost:8080/",
+    "ssl-required": "none",
+    "resource": "test-client",
+    "verify-token-audience": false,
+    "credentials": {
+      "secret": "VAWByNC3wU0AnmxivtlxQgL3Uj8fcjqe"
+    },
+    "confidential-port": 0
+  }
+
+
 }
