--- a/JEPCO.CSMS/JEPCO.CSMS.csproj
+++ b/JEPCO.CSMS/JEPCO.CSMS.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.5.1" />
+    <PackageReference Include="Keycloak.AuthServices.Authentication" Version="2.4.1" />
+    <PackageReference Include="Keycloak.AuthServices.Authorization" Version="2.4.1" />
+    <PackageReference Include="Keycloak.AuthServices.Common" Version="2.4.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
