--- a/JEPCO.Infrastructure/JEPCO.Infrastructure.csproj
+++ b/JEPCO.Infrastructure/JEPCO.Infrastructure.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <Folder Include="Mapper\" />
+    <Folder Include="Persistence\Migrations\" />
   </ItemGroup>
 
   <ItemGroup>
